# cpp-compile_time

./: CMakeLists.txt  IDENTIFICATION.txt  README.txt
app/: .test_cexpr_basic_string.cpp.swp  test_biquad_filter.cpp  test_cexpr_basic_string.cpp  test_cexpr_math.cpp  test_mandelbrot.cpp
cktmp/: assignment_id  commit_history  commit_id  submission_source
cktmp/distribution/: CMakeLists.txt
cktmp/distribution/app/: .test_cexpr_basic_string.cpp.un~  test_biquad_filter.cpp  test_cexpr_basic_string.cpp  test_cexpr_math.cpp
cktmp/distribution/include/ra/: biquad_filter.hpp  cexpr_basic_string.hpp  cexpr_math.hpp
cktmp/package-math_orig/build-test_biquad_filter/: log
cktmp/package-math_orig/build-test_cexpr_math/: log
cktmp/package-math_orig/configure/: log
cktmp/package-math_orig/derived/: CMakeCache.txt  Makefile  cmake_install.cmake  test_biquad_filter  test_cexpr_math
cktmp/package-math_sane/build-test_biquad_filter/: log
cktmp/package-math_sane/build-test_cexpr_math/: log
cktmp/package-math_sane/configure/: log
cktmp/package-math_sane/derived/: CMakeCache.txt  Makefile  cmake_install.cmake  compile_commands.json  test_biquad_filter
cktmp/package-string_orig/build-test_cexpr_basic_string/: log
cktmp/package-string_orig/build-test_mandelbrot/: log
cktmp/package-string_orig/configure/: log
cktmp/package-string_orig/derived/: CMakeCache.txt  Makefile  cmake_install.cmake  test_cexpr_basic_string  (+1 more)
include/ra/: .cexpr_basic_string.hpp.swp  .cexpr_basic_string.hpp.un~  biquad_filter.hpp  cexpr_basic_string.hpp  cexpr_math.hpp  mandelbrot.hpp
(+16 files in other folders)
